# conda-env-ng

./: README  pyproject.toml
conda_turbo/: cli.py  cmd_export.py  env.py  hooks.py  no_solve.py
conda_turbo/cli/: main.py  main_env.py  main_env_create.py  main_env_export.py
conda_turbo/env/: env.py
